// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdowns #handleClose -> Dropdown Menu Link Click closes dropdown 1`] = `
<div
  class="dropdown"
  data-dropdown="dropdown1"
  data-visible="false"
>
  
    
  <button
    aria-controls="new-dropdown"
    aria-expanded="false"
    aria-haspopup="true"
    data-parent="dropdown1"
    data-target="new-dropdown"
    id="dropdown-button"
  >
    Open Dropdown
  </button>
  
    
  <ul
    aria-labelledby="dropdown-button"
    class="dropdown-menu"
    id="new-dropdown"
  >
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 1
      </a>
    </li>
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 2
      </a>
    </li>
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 3
      </a>
    </li>
    
    
  </ul>
  
  
</div>
`;

exports[`Dropdowns #handleEscapeKeyPress -> Escape Key Press closes dropdown 1`] = `
<div
  class="dropdown"
  data-dropdown="dropdown1"
  data-visible="false"
>
  
    
  <button
    aria-controls="new-dropdown"
    aria-expanded="false"
    aria-haspopup="true"
    data-parent="dropdown1"
    data-target="new-dropdown"
    id="dropdown-button"
  >
    Open Dropdown
  </button>
  
    
  <ul
    aria-labelledby="dropdown-button"
    class="dropdown-menu"
    id="new-dropdown"
  >
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 1
      </a>
    </li>
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 2
      </a>
    </li>
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 3
      </a>
    </li>
    
    
  </ul>
  
  
</div>
`;

exports[`Dropdowns #handleFirstTabClose & #handleLastTabClose opens dropdown if shift + tab key is pressed in open menu 1`] = `
<div
  class="dropdown"
  data-dropdown="dropdown1"
  data-visible="false"
>
  
    
  <button
    aria-controls="new-dropdown"
    aria-expanded="false"
    aria-haspopup="true"
    data-parent="dropdown1"
    data-target="new-dropdown"
    id="dropdown-button"
  >
    Open Dropdown
  </button>
  
    
  <ul
    aria-labelledby="dropdown-button"
    class="dropdown-menu"
    id="new-dropdown"
  >
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 1
      </a>
    </li>
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 2
      </a>
    </li>
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 3
      </a>
    </li>
    
    
  </ul>
  
  
</div>
`;

exports[`Dropdowns #handleFirstTabClose & #handleLastTabClose opens dropdown if tab key is pressed in open menu 1`] = `
<div
  class="dropdown"
  data-dropdown="dropdown1"
  data-visible="false"
>
  
    
  <button
    aria-controls="new-dropdown"
    aria-expanded="false"
    aria-haspopup="true"
    data-parent="dropdown1"
    data-target="new-dropdown"
    id="dropdown-button"
  >
    Open Dropdown
  </button>
  
    
  <ul
    aria-labelledby="dropdown-button"
    class="dropdown-menu"
    id="new-dropdown"
  >
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 1
      </a>
    </li>
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 2
      </a>
    </li>
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 3
      </a>
    </li>
    
    
  </ul>
  
  
</div>
`;

exports[`Dropdowns #handleOffMenuClick -> Off-Dropdown Close Click closes dropdown 1`] = `
<div
  class="dropdown"
  data-dropdown="dropdown1"
  data-visible="false"
>
  
    
  <button
    aria-controls="new-dropdown"
    aria-expanded="false"
    aria-haspopup="true"
    data-parent="dropdown1"
    data-target="new-dropdown"
    id="dropdown-button"
  >
    Open Dropdown
  </button>
  
    
  <ul
    aria-labelledby="dropdown-button"
    class="dropdown-menu"
    id="new-dropdown"
  >
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 1
      </a>
    </li>
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 2
      </a>
    </li>
    
      
    <li
      role="none"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Item 3
      </a>
    </li>
    
    
  </ul>
  
  
</div>
`;

exports[`Dropdowns #render -> Dropdown Button Click opens clicked dropdown 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown1"
    data-visible="true"
  >
    
    
    <button
      aria-controls="new-dropdown"
      aria-expanded="true"
      aria-haspopup="true"
      data-parent="dropdown1"
      data-target="new-dropdown"
      id="dropdown-button"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button"
      class="dropdown-menu"
      id="new-dropdown"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="0"
        >
          Item 1
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="0"
        >
          Item 2
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="0"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown2"
  >
    
    
    <button
      aria-controls="new-dropdown2"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown2"
      data-target="new-dropdown2"
      id="dropdown-button2"
    >
      Open Dropdown 2
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button2"
      class="dropdown-menu"
      id="new-dropdown2"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdowns #renderWithKeys -> Arrow Down or Up Key Press opens dropdown on down arrow key press 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown1"
    data-visible="true"
  >
    
    
    <button
      aria-controls="new-dropdown"
      aria-expanded="true"
      aria-haspopup="true"
      data-parent="dropdown1"
      data-target="new-dropdown"
      id="dropdown-button"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button"
      class="dropdown-menu"
      id="new-dropdown"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="0"
        >
          Item 1
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="0"
        >
          Item 2
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="0"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown2"
  >
    
    
    <button
      aria-controls="new-dropdown2"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown2"
      data-target="new-dropdown2"
      id="dropdown-button2"
    >
      Open Dropdown 2
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button2"
      class="dropdown-menu"
      id="new-dropdown2"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdowns #renderWithKeys -> Arrow Down or Up Key Press opens dropdown on up arrow key press 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown1"
    data-visible="true"
  >
    
    
    <button
      aria-controls="new-dropdown"
      aria-expanded="true"
      aria-haspopup="true"
      data-parent="dropdown1"
      data-target="new-dropdown"
      id="dropdown-button"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button"
      class="dropdown-menu"
      id="new-dropdown"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="0"
        >
          Item 1
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="0"
        >
          Item 2
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="0"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown2"
  >
    
    
    <button
      aria-controls="new-dropdown2"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown2"
      data-target="new-dropdown2"
      id="dropdown-button2"
    >
      Open Dropdown 2
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button2"
      class="dropdown-menu"
      id="new-dropdown2"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdowns API start sets attributes 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown1"
  >
    
    
    <button
      aria-controls="new-dropdown"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown1"
      data-target="new-dropdown"
      id="dropdown-button"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button"
      class="dropdown-menu"
      id="new-dropdown"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown2"
  >
    
    
    <button
      aria-controls="new-dropdown2"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown2"
      data-target="new-dropdown2"
      id="dropdown-button2"
    >
      Open Dropdown 2
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button2"
      class="dropdown-menu"
      id="new-dropdown2"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdowns API stop -> Dropdown Button Click does not open dropdown 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown1"
  >
    
    
    <button
      aria-controls="new-dropdown"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown1"
      data-target="new-dropdown"
      id="dropdown-button"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button"
      class="dropdown-menu"
      id="new-dropdown"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown2"
  >
    
    
    <button
      aria-controls="new-dropdown2"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown2"
      data-target="new-dropdown2"
      id="dropdown-button2"
    >
      Open Dropdown 2
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button2"
      class="dropdown-menu"
      id="new-dropdown2"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdowns Multiple Dropdowns closes first dropdown if second dropdown is clicked 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown1"
    data-visible="false"
  >
    
    
    <button
      aria-controls="new-dropdown"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown1"
      data-target="new-dropdown"
      id="dropdown-button"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button"
      class="dropdown-menu"
      id="new-dropdown"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown2"
    data-visible="true"
  >
    
    
    <button
      aria-controls="new-dropdown2"
      aria-expanded="true"
      aria-haspopup="true"
      data-parent="dropdown2"
      data-target="new-dropdown2"
      id="dropdown-button2"
    >
      Open Dropdown 2
    </button>
    
    
    <ul
      aria-labelledby="dropdown-button2"
      class="dropdown-menu"
      id="new-dropdown2"
    >
      
      
      <li
        role="none"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="0"
        >
          Item 1
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;
